<resources>
    <string name="app_name">LibVisual</string>
    <string name="preferences_name">LibVisual preferences</string>
    <string name="about_app_name">LibVisual for Android</string>
    <string name="about_lib_name">libvisual</string>
    <string name="about_actor_name">About actor</string>
    <string name="about_input_name">About input</string>
    <string name="about_morph_name">About morph</string>
    <string name="prefs_title_general">General</string>
    <string name="prefs_title_plugins">Plugins</string>
    <string name="prefs_title_input">Input</string>
    <string name="prefs_title_morph">Morph</string>
    <string name="prefs_title_actor">Actor</string>
    <string name="prefs_title_general_settings">App settings</string>
    <string name="prefs_title_input_settings">Input plugin</string>
    <string name="prefs_title_morph_settings">Morph plugin</string>
    <string name="prefs_title_actor_settings">Actor plugin</string>
    <string name="prefs_title_real_fullscreen">Real Fullscreen</string>
    <string name="prefs_title_prevent_dimming">Prevent dimming</string>
    <string name="prefs_title_do_morph">Enable</string>
    <string name="prefs_summary_general_settings">General application settings</string>
    <string name="prefs_summary_real_fullscreen">Really use all available screenspace</string>
    <string name="prefs_summary_prevent_dimming">Prevent screen backlight dimming</string>
    <string name="prefs_summary_input">Choose audio input plugin</string>
    <string name="prefs_summary_input_settings">Sound input settings</string>
    <string name="prefs_summary_morph">Choose default morph plugin</string>
    <string name="prefs_summary_morph_settings">Settings for morphing between actors</string>
    <string name="prefs_summary_do_morph">Use morph plugin when changing actors</string>
    <string name="prefs_summary_actor_settings">Actor plugin settings</string>
    <string name="prefs_summary_actor">Choose default actor plugin</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About...</string>
    <string name="menu_about_libvisual_android">...this app</string>
    <string name="menu_about_libvisual">...the libvisual framework</string>
    <string name="menu_about_actor">...current actor plugin</string>
    <string name="menu_about_morph">...current morph plugin</string>
    <string name="menu_about_input">...current input plugin</string>
    <string name="about_title_copyright">Copyright</string>
    <string name="about_title_url">Homepage</string>
    <string name="about_title_changes">Changes</string>
    <string name="about_title_license">License</string>
    <string name="about_title_author">Author</string>
    <string name="about_title_help">Help</string>
    <string name="about_app_head">LibVisual v0.1</string>
    <string name="about_app_copyright">2011-2012 (C) Daniel Hiepler &lt;info-lva@niftylight.de&gt;\n2011-2012 (C) Scott Sibley &lt;sisibley@gmail.com&gt;</string>
    <string name="about_app_url">http://github.com/libvisual/LibVisualAndroid</string>
    <string name="about_app_description">Audio visualization for android using libvisual</string>
    <string name="about_app_changes">* v0.1 beta - initial beta release</string>
    <string name="about_lib_head">libvisual v0.5.0</string>
    <string name="about_lib_copyright">Copyright (C) 2004-2006 Dennis Smit &lt;ds@nerds-incorporated.org&gt;</string>
    <string name="about_lib_url">http://libvisual.org</string>
    <string name="about_lib_description">Plugin based audio visualization framework</string>
    <string name="about_lib_changes">s. commit log</string>
</resources>